# pomoshumai

./: .gitignore  Cargo.toml  build.rs
.github/workflows/: release.yml
assets/discord/: README.md
assets/windows/: app.rc
examples/: generate-third-party-licenses.rs
src/: app.rs  main.rs
src/app/: actions.rs  discord.rs  lifecycle.rs  mod.rs  render.rs  settings.rs  state.rs  storage.rs  timer.rs  ui.rs
