[package]
name = "pomoshumai"
version = "0.1.0"
edition = "2024"

[package.metadata.packager]
before-packaging-command = "cargo build --release"
formats = ["nsis"]
product-name = "pomoshumai"
identifier = "com.kemoshumai.pomoshumai"

[dependencies]
discord-presence = { version = "3.2.0", features = ["unstable_name"] }
directories = "5.0.1"
gpui = "0.2.2"
gpui-component = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1.3"
