[package]
name = "pomoshumai"
version = "0.1.3"
edition = "2024"

[package.metadata.packager]
before-packaging-command = "cargo build --release"
product-name = "pomoshumai"
identifier = "com.kemoshumai.pomoshumai"
out-dir = "dist"
icons = ["assets/icons/256x256.png"]

[package.metadata.packager.macos]
signing-identity = "-"

[dependencies]
discord-presence = { version = "3.2.0", features = ["unstable_name"] }
directories = "5.0.1"
gpui-component = { version = "0.5.1", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1.3"

[target.'cfg(target_os = "windows")'.dependencies]
gpui = { version = "0.2.2", default-features = false, features = ["windows-manifest"] }

[target.'cfg(target_os = "macos")'.dependencies]
gpui = { version = "0.2.2", default-features = false, features = ["font-kit"] }

[target.'cfg(target_os = "linux")'.dependencies]
gpui = { version = "0.2.2", default-features = false, features = ["wayland", "x11"] }